--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="/Pages/print.html"><h3>Print</h3></a>
             </div>
             <div class="rond" id="web">
-                <a href="/Portfolio/Pages/web.html"><h3>Web</h3></a>
+                <a href="../Portfolio/Pages/web.html"><h3>Web</h3></a>
             </div>
             <div class="rond" id="contact">
                 <a href="/Pages/contact.html"><h3>Contact</h3></a>
