--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         </div>
         <div class="onglet">
             <div class="rond" id="print">
-                <a href="/Pages/print.html"><h3>Print</h3></a>
+                <a href="../Portfolio/Pages/print.html"><h3>Print</h3></a>
             </div>
             <div class="rond" id="web">
                 <a href="../Portfolio/Pages/web.html"><h3>Web</h3></a>
             </div>
             <div class="rond" id="contact">
-                <a href="/Pages/contact.html"><h3>Contact</h3></a>
+                <a href="../Portfolio/Pages/contact.html"><h3>Contact</h3></a>
             </div>
         </div>
     </body>
 
     <footer class="foot">
-        <a href="Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
+        <a href="../PortfolioPages/whoami.html"><h4>Qui suis-je ?</h4></a>
         <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
     </footer>
 
