--- a/Pages/web.html
+++ b/Pages/web.html
@@ -14,17 +14,17 @@
     <body>
         <div class="header">
             <div class="PP">
-                <a href="/index.html"><h1>Pauline Pierson</h1></a>
+                <a href="../Portfolio/index.html"><h1>Pauline Pierson</h1></a>
             </div>
             <div class="onglet">
                 <div class="rond" id="print">
-                    <a href="print.html"><h3>Print</h3></a>
+                    <a href="../Portfolioprint.html"><h3>Print</h3></a>
                 </div>
                 <div class="rond" id="web">
-                    <a href="web.html"><h3>Web</h3></a>
+                    <a href="../Portfolioweb.html"><h3>Web</h3></a>
                 </div>
                 <div class="rond" id="contact">
-                    <a href="contact.html"><h3>Contact</h3></a>
+                    <a href="../Portfoliocontact.html"><h3>Contact</h3></a>
                 </div>
             </div>
         </div>
@@ -34,13 +34,13 @@
         <div class="carousel">
             <div id="card">
                 <h2>Troyes Petits Chats</h2>
-                <img src="/Images/TPC.png" alt="Troyes Petits Chats" title="Troyes Petits Chats">
+                <img src="../Portfolio/Images/TPC.png" alt="Troyes Petits Chats" title="Troyes Petits Chats">
                 <p>Projet stage RAN Pro <a href="https://troyespetitschats.fr/" target="_blank" title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
             </div>
             <div id="card">
                 <h2>Choubu</h2>
                 <video controls width="500" alt="Choubu" title="Choubu">
-                    <source src="/Images/Choubu.mp4" type="video/mp4">
+                    <source src="../Portfolio/Images/Choubu.mp4" type="video/mp4">
                 </video>                
                 <p>Projet WordPress en RAN Pro</p>
             </div>
@@ -48,7 +48,7 @@
     </body>
 
     <footer class="foot">
-        <a href="Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
+        <a href="../PortfolioPages/whoami.html"><h4>Qui suis-je ?</h4></a>
         <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
     </footer>
 
