--- a/Pages/web.html
+++ b/Pages/web.html
@@ -18,13 +18,13 @@
             </div>
             <div class="onglet">
                 <div class="rond" id="print">
-                    <a href="../Portfolioprint.html"><h3>Print</h3></a>
+                    <a href="../Portfolio/print.html"><h3>Print</h3></a>
                 </div>
                 <div class="rond" id="web">
-                    <a href="../Portfolioweb.html"><h3>Web</h3></a>
+                    <a href="../Portfolio/web.html"><h3>Web</h3></a>
                 </div>
                 <div class="rond" id="contact">
-                    <a href="../Portfoliocontact.html"><h3>Contact</h3></a>
+                    <a href="../Portfolio/contact.html"><h3>Contact</h3></a>
                 </div>
             </div>
         </div>
@@ -48,7 +48,7 @@
     </body>
 
     <footer class="foot">
-        <a href="../PortfolioPages/whoami.html"><h4>Qui suis-je ?</h4></a>
+        <a href="../Portfolio/Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
         <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
     </footer>
 
