--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </body>
 
     <footer class="foot">
-        <a href="../PortfolioPages/whoami.html"><h4>Qui suis-je ?</h4></a>
+        <a href="../Portfolio/Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
         <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
     </footer>
 
