--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -27,6 +27,9 @@
                 </div>
             </div>
         </div>
+        <div class="bandeau" id="contact">
+            <h2>Web</h2>
+        </div>
 
     <footer class="foot">
         <a href="../Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
