--- a/Pages/print.html
+++ b/Pages/print.html
@@ -27,6 +27,9 @@
                     </div>
                 </div>
             </div>
+            <div class="bandeau" id="print">
+                <h2>Print</h2>
+            </div>
         </body>
     
         <footer class="foot">
