--- a/Pages/web.html
+++ b/Pages/web.html
@@ -28,19 +28,19 @@
                 </div>
             </div>
         </div>
-        <div class="bandeau">
+        <div class="bandeau" id="web">
             <h2>Web</h2>
         </div>
         <div class="carousel">
             <div id="card">
                 <h2>Troyes Petits Chats</h2>
-                <img src="../Images/TPC.png" alt="Troyes Petits Chats" title="Troyes Petits Chats">
+                <img src="../Images/Web/TPC.png" alt="Troyes Petits Chats" title="Troyes Petits Chats">
                 <p>Projet stage RAN Pro <a href="https://troyespetitschats.fr/" target="_blank" title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
             </div>
             <div id="card">
                 <h2>Choubu</h2>
                 <video controls width="500" alt="Choubu" title="Choubu">
-                    <source src="../Images/Choubu.mp4" type="video/mp4">
+                    <source src="../Images/Web/Choubu.mp4" type="video/mp4">
                 </video>                
                 <p>Projet WordPress en RAN Pro</p>
             </div>
