--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <div class="bandeau" id="contact">
+        <div class="bandeau" id="b-contact">
             <h2>Web</h2>
         </div>
 
