--- a/Pages/print.html
+++ b/Pages/print.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bandeau" id="print">
+            <div class="bandeau" id="b-print">
                 <h2>Print</h2>
             </div>
         </body>
