--- a/Pages/web.html
+++ b/Pages/web.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-        <div class="bandeau" id="web">
+        <div class="bandeau" id="b-web">
             <h2>Web</h2>
         </div>
         <div class="carousel">
