--- a/index.html
+++ b/index.html
@@ -19,20 +19,28 @@
             <h2>L'alliance du print et du web</h2>
         </div>
         <div class="onglet">
-            <div class="rond" id="print">
-                <a href="../Portfolio/Pages/print.html"><h3>Print</h3></a>
-            </div>
-            <div class="rond" id="web">
-                <a href="../Portfolio/Pages/web.html"><h3>Web</h3></a>
-            </div>
-            <div class="rond" id="contact">
-                <a href="../Portfolio/Pages/contact.html"><h3>Contact</h3></a>
-            </div>
+            <a href="../Portfolio/Pages/print.html">
+                <div class="rond" id="print">
+                    <h3>Print</h3>
+                </div>
+            </a>
+            <a href="../Portfolio/Pages/web.html">
+                <div class="rond" id="web">
+                    <h3>Web</h3>
+                </div>
+            </a>
+            <a href="../Portfolio/Pages/contact.html">
+                <div class="rond" id="contact">
+                    <h3>Contact</h3>
+                </div>
+            </a>
         </div>
     </body>
 
     <footer class="foot">
-        <a href="../Portfolio/Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
+        <a href="../Portfolio/Pages/whoami.html">
+            <h4>Qui suis-je ?</h4>
+        </a>
         <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
     </footer>
 
