--- a/Pages/print.html
+++ b/Pages/print.html
@@ -16,15 +16,21 @@
                     <a href="../index.html"><h1>Pauline Pierson</h1></a>
                 </div>
                 <div class="onglet">
-                    <div class="rond" id="print">
-                        <a href="../Pages/print.html"><h3>Print</h3></a>
-                    </div>
-                    <div class="rond" id="web">
-                        <a href="../Pages/web.html"><h3>Web</h3></a>
-                    </div>
-                    <div class="rond" id="contact">
-                        <a href="../Pages/contact.html"><h3>Contact</h3></a>
-                    </div>
+                    <a href="../Pages/print.html">
+                        <div class="rond" id="print">
+                            <h3>Print</h3>
+                        </div>
+                    </a>
+                    <a href="../Pages/web.html">
+                        <div class="rond" id="web">
+                            <h3>Web</h3>
+                        </div>
+                    </a>
+                    <a href="../Pages/contact.html">
+                        <div class="rond" id="contact">
+                            <h3>Contact</h3>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="bandeau" id="b-print">
