--- a/Pages/web.html
+++ b/Pages/web.html
@@ -14,18 +14,26 @@
     <body>
         <div class="header">
             <div class="PP">
-                <a href="../index.html"><h1>Pauline Pierson</h1></a>
+                <a href="../index.html">
+                    <h1>Pauline Pierson</h1>
+                </a>
             </div>
             <div class="onglet">
-                <div class="rond" id="print">
-                    <a href="../Pages/print.html"><h3>Print</h3></a>
-                </div>
-                <div class="rond" id="web">
-                    <a href="../Pages/web.html"><h3>Web</h3></a>
-                </div>
-                <div class="rond" id="contact">
-                    <a href="../Pages/contact.html"><h3>Contact</h3></a>
-                </div>
+                <a href="../Pages/print.html">
+                    <div class="rond" id="print">
+                        <h3>Print</h3>
+                    </div>
+                </a>
+                <a href="../Pages/web.html">
+                    <div class="rond" id="web">
+                        <h3>Web</h3>
+                    </div>
+                </a>
+                <a href="../Pages/contact.html">
+                    <div class="rond" id="contact">
+                        <h3>Contact</h3>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="bandeau" id="b-web">
@@ -35,20 +43,23 @@
             <div id="card">
                 <h2>Troyes Petits Chats</h2>
                 <img src="../Images/Web/TPC.png" alt="Troyes Petits Chats" title="Troyes Petits Chats">
-                <p>Projet stage RAN Pro <a href="https://troyespetitschats.fr/" target="_blank" title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
+                <p>Projet stage RAN Pro <a href="https://troyespetitschats.fr/" target="_blank"
+                        title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
             </div>
             <div id="card">
                 <h2>Choubu</h2>
                 <video controls width="500" alt="Choubu" title="Choubu">
                     <source src="../Images/Web/Choubu.mp4" type="video/mp4">
-                </video>                
+                </video>
                 <p>Projet WordPress en RAN Pro</p>
             </div>
         </div>
     </body>
 
     <footer class="foot">
-        <a href="../Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
+        <a href="../Pages/whoami.html">
+            <h4>Qui suis-je ?</h4>
+        </a>
         <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
     </footer>
 
