--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,10 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="stylepage.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <title>Pauline Pierson - Contact</title>
 </head>
-<body>
-    
-</body>
+
+<div class="container">
+
+    <body>
+        <div class="header">
+            <div class="PP">
+                <a href="../index.html"><h1>Pauline Pierson</h1></a>
+            </div>
+            <div class="onglet">
+                <a href="../Pages/print.html">
+                    <div class="rond" id="print">
+                        <h3>Print</h3>
+                    </div>
+                </a>
+                <a href="../Pages/web.html">
+                    <div class="rond" id="web">
+                        <h3>Web</h3>
+                    </div>
+                </a>
+                <a href="../Pages/contact.html">
+                    <div class="rond" id="contact">
+                        <h3>Contact</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="bandeau" id="b-contact">
+            <h2>Web</h2>
+        </div>
+
+    <footer class="foot">
+        <a href="../Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
+        <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
+    </footer>
+
+</div>
+
 </html>
