--- a/Pages/web.html
+++ b/Pages/web.html
@@ -4,8 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="stylepage.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <title>Pauline Pierson - Web</title>
 </head>
 
@@ -14,41 +19,52 @@
     <body>
         <div class="header">
             <div class="PP">
-                <a href="../index.html"><h1>Pauline Pierson</h1></a>
+                <a href="../index.html">
+                    <h1>Pauline Pierson</h1>
+                </a>
             </div>
             <div class="onglet">
-                <div class="rond" id="print">
-                    <a href="../Pages/print.html"><h3>Print</h3></a>
-                </div>
-                <div class="rond" id="web">
-                    <a href="../Pages/web.html"><h3>Web</h3></a>
-                </div>
-                <div class="rond" id="contact">
-                    <a href="../Pages/contact.html"><h3>Contact</h3></a>
-                </div>
+                <a href="../Pages/print.html">
+                    <div class="rond" id="print">
+                        <h3>Print</h3>
+                    </div>
+                </a>
+                <a href="../Pages/web.html">
+                    <div class="rond" id="web">
+                        <h3>Web</h3>
+                    </div>
+                </a>
+                <a href="../Pages/contact.html">
+                    <div class="rond" id="contact">
+                        <h3>Contact</h3>
+                    </div>
+                </a>
             </div>
         </div>
-        <div class="bandeau">
+        <div class="bandeau" id="b-web">
             <h2>Web</h2>
         </div>
         <div class="carousel">
             <div id="card">
                 <h2>Troyes Petits Chats</h2>
-                <img src="../Images/TPC.png" alt="Troyes Petits Chats" title="Troyes Petits Chats">
-                <p>Projet stage RAN Pro <a href="https://troyespetitschats.fr/" target="_blank" title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
+                <img src="../Images/Web/TPC.png" alt="Troyes Petits Chats" title="Troyes Petits Chats">
+                <p>Projet stage RAN Pro <a href="https://troyespetitschats.fr/" target="_blank"
+                        title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
             </div>
             <div id="card">
                 <h2>Choubu</h2>
                 <video controls width="500" alt="Choubu" title="Choubu">
-                    <source src="../Images/Choubu.mp4" type="video/mp4">
-                </video>                
+                    <source src="../Images/Web/Choubu.mp4" type="video/mp4">
+                </video>
                 <p>Projet WordPress en RAN Pro</p>
             </div>
         </div>
     </body>
 
     <footer class="foot">
-        <a href="../Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
+        <a href="../Pages/whoami.html">
+            <h4>Qui suis-je ?</h4>
+        </a>
         <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
     </footer>
 
