--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <title>Pauline Pierson</title>
 </head>
 
@@ -19,20 +24,28 @@
             <h2>L'alliance du print et du web</h2>
         </div>
         <div class="onglet">
-            <div class="rond" id="print">
-                <a href="../Portfolio/Pages/print.html"><h3>Print</h3></a>
-            </div>
-            <div class="rond" id="web">
-                <a href="../Portfolio/Pages/web.html"><h3>Web</h3></a>
-            </div>
-            <div class="rond" id="contact">
-                <a href="../Portfolio/Pages/contact.html"><h3>Contact</h3></a>
-            </div>
+            <a href="../Portfolio/Pages/print.html">
+                <div class="rond" id="print">
+                    <h3>Print</h3>
+                </div>
+            </a>
+            <a href="../Portfolio/Pages/web.html">
+                <div class="rond" id="web">
+                    <h3>Web</h3>
+                </div>
+            </a>
+            <a href="../Portfolio/Pages/contact.html">
+                <div class="rond" id="contact">
+                    <h3>Contact</h3>
+                </div>
+            </a>
         </div>
     </body>
 
     <footer class="foot">
-        <a href="../Portfolio/Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
+        <a href="../Portfolio/Pages/whoami.html">
+            <h4>Qui suis-je ?</h4>
+        </a>
         <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
     </footer>
 
