--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="bandeau" id="b-contact">
-            <h2>Web</h2>
+            <h2>Contact</h2>
         </div>
 
     <footer class="foot">
