--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -16,6 +16,7 @@
 <div class="container">
 
     <body>
+        <!-- HEADER -->
         <div class="header">
             <div class="PP">
                 <a href="../index.html"><h1>Pauline Pierson</h1></a>
@@ -38,9 +39,12 @@
                 </a>
             </div>
         </div>
+        <!-- FIN HEADER -->
+        <!-- CONTACT-->
         <div class="bandeau" id="b-contact">
             <h2>Contact</h2>
         </div>
+        <!-- FIN CONTACT -->
 
     <footer class="foot">
         <a href="../Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
