--- a/Pages/print.html
+++ b/Pages/print.html
@@ -16,6 +16,7 @@
     <div class="container">
 
         <body>
+            <!-- HEADER -->
             <div class="header">
                 <div class="PP">
                     <a href="../index.html"><h1>Pauline Pierson</h1></a>
@@ -38,9 +39,12 @@
                     </a>
                 </div>
             </div>
+            <!-- FIN HEADER -->
+            <!-- WORK -->
             <div class="bandeau" id="b-print">
                 <h2>Print</h2>
             </div>
+            <!-- FIN WORK -->
         </body>
     
         <footer class="foot">
