--- a/Pages/web.html
+++ b/Pages/web.html
@@ -17,6 +17,7 @@
 <div class="container">
 
     <body>
+        <!-- HEADER -->
         <div class="header">
             <div class="PP">
                 <a href="../index.html">
@@ -41,10 +42,12 @@
                 </a>
             </div>
         </div>
+        <!-- FIN HEADER -->
+        <!-- WORK -->
         <div class="bandeau" id="b-web">
             <h2>Web</h2>
         </div>
-        <div class="carousel">
+        <div class="back-card">
             <div id="card">
                 <h2>Troyes Petits Chats</h2>
                 <img src="../Images/Web/TPC.png" alt="Troyes Petits Chats" title="Troyes Petits Chats">
@@ -59,6 +62,7 @@
                 <p>Projet WordPress en RAN Pro</p>
             </div>
         </div>
+        <!-- FIN WORK -->
     </body>
 
     <footer class="foot">
