change id by class

--- a/Pages/web.html
+++ b/Pages/web.html
@@ -48,13 +48,13 @@
             <h2>Web</h2>
         </div>
         <div class="back-card">
-            <div id="card">
+            <div class="card">
                 <h2>Troyes Petits Chats</h2>
                 <img src="../Images/Web/TPC.png" alt="Troyes Petits Chats" title="Troyes Petits Chats">
                 <p>Projet stage RAN Pro <a href="https://troyespetitschats.fr/" target="_blank"
                         title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
             </div>
-            <div id="card">
+            <div class="card">
                 <h2>Choubu</h2>
                 <video controls width="500" alt="Choubu" title="Choubu">
                     <source src="../Images/Web/Choubu.mp4" type="video/mp4">
