--- a/Pages/web.html
+++ b/Pages/web.html
@@ -52,7 +52,8 @@
                     style="min-width:100%"> 
                     </div>
                     <div class="mySlides fade dnone">
-                        <video controls width="500" alt="Choubu" title="Choubu" id="myImg2" onclick="clickNext('myImg2')">
+                        <video id="myImg2" onclick="clickNext('myImg2')" controls width="500" alt="Choubu" title="Choubu"
+                        style="min-width:100%">
                             <source src="../Images/Web/TPC.mp4" type="video/mp4">
                         </video> 
                     </div>
