--- a/Pages/web.html
+++ b/Pages/web.html
@@ -74,6 +74,11 @@
                 </video>
                 <p>Projet WordPress en RAN Pro</p>
             </div>
+            <div id="myModal" class="modal">
+                <span class="close">&times;</span>
+                <img class="modal-content" id="img">
+                <div id="caption"></div>
+            </div>
         </div>
         <!-- FIN WORK -->
         <script src="app.js"></script>
