--- a/Pages/web.html
+++ b/Pages/web.html
@@ -43,7 +43,7 @@
             <h2>Web</h2>
         </div>
         <div class="back-card">
-            <div class="card" id="slide1">
+            <div class="card" id="slide">
                 <h2>Troyes Petits Chats</h2>
                 <div class="slideshow-container">
                     <div class="mySlides fade">
@@ -66,7 +66,7 @@
                 <p>Projet stage RAN Pro <a href="https://troyespetitschats.fr/" target="_blank"
                         title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
             </div>
-            <div class="card" id="slide2">
+            <div class="card" id="slide1">
                 <h2>Choubu</h2>
                 <div class="slideshow-container">
                     <div class="mySlides fade">
