--- a/Pages/web.html
+++ b/Pages/web.html
@@ -51,7 +51,7 @@
                             alt="Troyes Petits Chats" title="Troyes Petits Chats" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <video id="myImg2" onclick="clickNext('myImg2')" controls width="500" alt="Troyes Petits Chats"
+                        <video id="myImg2" onclick="clickNext('myImg2')" controls autoplay muted width="500" alt="Troyes Petits Chats"
                             title="Troyes Petits Chats" style="min-width:100%">
                             <source src="../Images/Web/TPC.mp4" type="video/mp4">
                         </video>
@@ -74,7 +74,7 @@
                             title="Choubu" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <video id="myImg4" onclick="clickNext('myImg4')" controls width="500" alt="Choubu"
+                        <video id="myImg4" onclick="clickNext('myImg4')" controls autoplay muted width="500" alt="Choubu"
                             title="Choubu" style="min-width:100%">
                             <source src="../Images/Web/Choubu.mp4" type="video/mp4">
                         </video>
