--- a/Pages/web.html
+++ b/Pages/web.html
@@ -79,8 +79,8 @@
                             <source src="../Images/Web/Choubu.mp4" type="video/mp4">
                         </video>
                     </div>
-                    <a class="prev" onclick="plusSlides('slide',-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides('slide',1)">&#10095;</a>
+                    <a class="prev" onclick="plusSlides('slide1',-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides('slide1',1)">&#10095;</a>
                 </div>
                 <div class="dots" style="text-align:center">
                     <span class="dot active" onclick="currentSlide('slide',0)"></span>
