--- a/Pages/web.html
+++ b/Pages/web.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylepage.css">
     <title>Pauline Pierson - Web</title>
+    <link rel="icon" type="image/x-icon" href="../Portfolio/Images/Favicon/PP.png">
 </head>
 
 <div class="container">
