--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <link rel="stylesheet" href="style.css">
     <title>Pauline Pierson</title>
+    <link rel="icon" type="image/x-icon" href="../Portfolio/Images/Favicon/PP.png">
 </head>
 
 <div class="container">
