--- a/Pages/web.html
+++ b/Pages/web.html
@@ -52,7 +52,7 @@
                             alt="Troyes Petits Chats" title="Troyes Petits Chats" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <video id="myImg2" onclick="clickNext('myImg2')" src="../Images/Web/TPC.mp4" type="video/mp4" controls autoplay muted width="500" alt="Troyes Petits Chats"
+                        <video id="myVid1" onclick="clickNext('myVid1')" src="../Images/Web/TPC.mp4" type="video/mp4" controls autoplay muted width="500" alt="Troyes Petits Chats"
                             title="Troyes Petits Chats" style="min-width:100%">
                             <source src="../Images/Web/TPC.mp4" type="video/mp4">
                         </video>
@@ -75,7 +75,7 @@
                             title="Choubu" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <video id="myImg4" onclick="clickNext('myImg4')" controls autoplay muted width="500" alt="Choubu"
+                        <video id="myVid2" onclick="clickNext('myVid2')" controls autoplay muted width="500" alt="Choubu"
                             title="Choubu" style="min-width:100%">
                             <source src="../Images/Web/Choubu.mp4" type="video/mp4">
                         </video>
@@ -91,6 +91,7 @@
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
                 <img class="modal-content" id="img">
+                <video class="modal-content" id="video">
                 <div id="caption"></div>
             </div>
         </div>
