--- a/Pages/web.html
+++ b/Pages/web.html
@@ -71,11 +71,11 @@
                 <h2>Choubu</h2>
                 <div class="slideshow-container">
                     <div class="mySlides fade">
-                        <img id="myImg3" onclick="clickNext('myImg3')" src="../Images/Web//Choubu.png" alt="Choubu"
+                        <img id="myImg2" onclick="clickNext('myImg2')" src="../Images/Web//Choubu.png" alt="Choubu"
                             title="Choubu" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <video id="myVid2" onclick="clickNext('myVid2')" controls autoplay muted width="500" alt="Choubu"
+                        <video id="myVid2" onclick="clickNext('myVid2')" src="../Images/Web/Choubu.mp4" type="video/mp4" controls autoplay muted width="500" alt="Choubu"
                             title="Choubu" style="min-width:100%">
                             <source src="../Images/Web/Choubu.mp4" type="video/mp4">
                         </video>
@@ -91,7 +91,7 @@
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
                 <img class="modal-content" id="img">
-                <video class="modal-content" id="video">
+                <video controls class="modal-content" id="video">
                 <div id="caption"></div>
             </div>
         </div>
