--- a/Pages/web.html
+++ b/Pages/web.html
@@ -48,11 +48,11 @@
                 <h2>Troyes Petits Chats</h2>
                 <div class="slideshow-container">
                     <div class="mySlides fade">
-                        <img id="myImg1" onclick="clickNext('myImg1')" src="../Images/Web/TPC.png"
+                        <img id="myImg" onclick="clickNext('myImg')" src="../Images/Web/TPC.png"
                             alt="Troyes Petits Chats" title="Troyes Petits Chats" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <video id="myVid1" onclick="clickNext('myVid1')" src="../Images/Web/TPC.mp4" type="video/mp4" controls autoplay muted width="500" alt="Troyes Petits Chats"
+                        <video id="myVid" onclick="clickNext('myVid')" src="../Images/Web/TPC.mp4" type="video/mp4" controls autoplay muted width="500" alt="Troyes Petits Chats"
                             title="Troyes Petits Chats" style="min-width:100%">
                             <source src="../Images/Web/TPC.mp4" type="video/mp4">
                         </video>
@@ -71,11 +71,11 @@
                 <h2>Choubu</h2>
                 <div class="slideshow-container">
                     <div class="mySlides fade">
-                        <img id="myImg2" onclick="clickNext('myImg2')" src="../Images/Web//Choubu.png" alt="Choubu"
+                        <img id="myImg1" onclick="clickNext('myImg1')" src="../Images/Web//Choubu.png" alt="Choubu"
                             title="Choubu" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <video id="myVid2" onclick="clickNext('myVid2')" src="../Images/Web/Choubu.mp4" type="video/mp4" controls autoplay muted width="500" alt="Choubu"
+                        <video id="myVid1" onclick="clickNext('myVid1')" src="../Images/Web/Choubu.mp4" type="video/mp4" controls autoplay muted width="500" alt="Choubu"
                             title="Choubu" style="min-width:100%">
                             <source src="../Images/Web/Choubu.mp4" type="video/mp4">
                         </video>
@@ -91,7 +91,7 @@
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
                 <img class="modal-content" id="img">
-                <video controls class="modal-content" id="video">
+                <video controls autoplay class="modal-content" id="video">
                 <div id="caption"></div>
             </div>
         </div>
