--- a/Pages/web.html
+++ b/Pages/web.html
@@ -53,9 +53,7 @@
                     </div>
                     <div class="mySlides fade dnone">
                         <video id="myVid" onclick="clickNext('myVid')" src="../Images/Web/TPC.mp4" type="video/mp4" controls autoplay muted width="500" alt="Troyes Petits Chats"
-                            title="Troyes Petits Chats" style="min-width:100%">
-                            <source src="../Images/Web/TPC.mp4" type="video/mp4">
-                        </video>
+                            title="Troyes Petits Chats" style="min-width:100%"></video>
                     </div>
                     <a class="prev" onclick="plusSlides('slide',-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides('slide',1)">&#10095;</a>
@@ -76,17 +74,16 @@
                     </div>
                     <div class="mySlides fade dnone">
                         <video id="myVid1" onclick="clickNext('myVid1')" src="../Images/Web/Choubu.mp4" type="video/mp4" controls autoplay muted width="500" alt="Choubu"
-                            title="Choubu" style="min-width:100%">
-                            <source src="../Images/Web/Choubu.mp4" type="video/mp4">
-                        </video>
+                            title="Choubu" style="min-width:100%"></video>
                     </div>
                     <a class="prev" onclick="plusSlides('slide1',-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides('slide1',1)">&#10095;</a>
                 </div>
                 <div class="dots" style="text-align:center">
-                    <span class="dot active" onclick="currentSlide('slide',0)"></span>
-                    <span class="dot" onclick="currentSlide('slide',1)"></span>
+                    <span class="dot active" onclick="currentSlide('slide1',0)"></span>
+                    <span class="dot" onclick="currentSlide('slide1',1)"></span>
                 </div>
+                <p>Projet en cours RAN Pro</p>
             </div>
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
