--- a/Pages/web.html
+++ b/Pages/web.html
@@ -88,7 +88,7 @@
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
                 <img class="modal-content" id="img">
-                <video controls autoplay class="modal-content" id="video">
+                <video controls autoplay class="modal-content" id="video"></video>
                 <div id="caption"></div>
             </div>
         </div>
