--- a/Pages/web.html
+++ b/Pages/web.html
@@ -62,7 +62,7 @@
                     <span class="dot active" onclick="currentSlide('slide',0)"></span>
                     <span class="dot" onclick="currentSlide('slide',1)"></span>
                 </div>
-                <p>Projet stage RAN Pro <a href="https://troyespetitschats.fr/" target="_blank"
+                <p>Site réalisé sous Wordpress durant le stage en RAN Pro <a href="https://troyespetitschats.fr/" target="_blank"
                         title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
             </div>
             <div class="card" id="slide1">
@@ -83,7 +83,7 @@
                     <span class="dot active" onclick="currentSlide('slide1',0)"></span>
                     <span class="dot" onclick="currentSlide('slide1',1)"></span>
                 </div>
-                <p>Projet en cours RAN Pro</p>
+                <p>E-boutique réalisée en local sous Wordpress</p>
             </div>
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
