--- a/Pages/web.html
+++ b/Pages/web.html
@@ -52,18 +52,19 @@
                             alt="Troyes Petits Chats" title="Troyes Petits Chats" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <video id="myVid" onclick="clickNext('myVid')" src="../Images/Web/TPC.mp4" type="video/mp4" controls autoplay muted width="500" alt="Troyes Petits Chats"
-                            title="Troyes Petits Chats" style="min-width:100%"></video>
+                        <video id="myVid" onclick="clickNext('myVid')" src="../Images/Web/TPC.mp4" type="video/mp4"
+                            controls autoplay muted width="500" alt="Troyes Petits Chats" title="Troyes Petits Chats"
+                            style="min-width:100%"></video>
                     </div>
                     <a class="prev" onclick="plusSlides('slide',-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides('slide',1)">&#10095;</a>
+                    <div class="dots" style="text-align:center">
+                        <span class="dot active" onclick="currentSlide('slide',0)"></span>
+                        <span class="dot" onclick="currentSlide('slide',1)"></span>
+                    </div>
                 </div>
-                <div class="dots" style="text-align:center">
-                    <span class="dot active" onclick="currentSlide('slide',0)"></span>
-                    <span class="dot" onclick="currentSlide('slide',1)"></span>
-                </div>
-                <p>Site réalisé sous Wordpress durant le stage en RAN Pro <a href="https://troyespetitschats.fr/" target="_blank"
-                        title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
+                <p>Site réalisé sous Wordpress durant le stage en RAN Pro <a href="https://troyespetitschats.fr/"
+                        target="_blank" title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
             </div>
             <div class="card" id="slide1">
                 <h2>Choubu</h2>
@@ -73,16 +74,17 @@
                             title="Choubu" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <video id="myVid1" onclick="clickNext('myVid1')" src="../Images/Web/Choubu.mp4" type="video/mp4" controls autoplay muted width="500" alt="Choubu"
-                            title="Choubu" style="min-width:100%"></video>
+                        <video id="myVid1" onclick="clickNext('myVid1')" src="../Images/Web/Choubu.mp4" type="video/mp4"
+                            controls autoplay muted width="500" alt="Choubu" title="Choubu"
+                            style="min-width:100%"></video>
                     </div>
                     <a class="prev" onclick="plusSlides('slide1',-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides('slide1',1)">&#10095;</a>
-                </div>
-                <div class="dots" style="text-align:center">
+                    <div class="dots" style="text-align:center">
                     <span class="dot active" onclick="currentSlide('slide1',0)"></span>
                     <span class="dot" onclick="currentSlide('slide1',1)"></span>
                 </div>
+                </div>                
                 <p>E-boutique réalisée en local sous Wordpress</p>
             </div>
             <div id="myModal" class="modal">
