--- a/Pages/web.html
+++ b/Pages/web.html
@@ -44,9 +44,9 @@
             <h2>Web</h2>
         </div>
         <div class="back-card">
-            <div class="card" id="slide">
+            <div class="card">
                 <h2>Troyes Petits Chats</h2>
-                <div class="slideshow-container">
+                <div class="slideshow-container" id="slide">
                     <div class="mySlides fade">
                         <img id="myImg" onclick="clickNext('myImg')" src="../Images/Web/TPC.png"
                             alt="Troyes Petits Chats" title="Troyes Petits Chats" style="min-width:100%">
@@ -56,41 +56,41 @@
                             controls autoplay muted width="500" alt="Troyes Petits Chats" title="Troyes Petits Chats"
                             style="min-width:100%"></video>
                     </div>
-                    <a class="prev" onclick="plusSlides('slide',-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides('slide',1)">&#10095;</a>
+                    <a class="prev" onclick="plusSlides(slide,-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(slide,1)">&#10095;</a>
                     <div class="dots" style="text-align:center">
-                        <span class="dot active" onclick="currentSlide('slide',0)"></span>
-                        <span class="dot" onclick="currentSlide('slide',1)"></span>
+                        <span class="dot active" onclick="currentSlide(slide,0)"></span>
+                        <span class="dot" onclick="currentSlide(slide,1)"></span>
                     </div>
                 </div>
                 <p>Site réalisé sous Wordpress durant le stage en RAN Pro <a href="https://troyespetitschats.fr/"
                         target="_blank" title="TroyesPetitsChats.fr">TroyesPetitsChats.fr</a></p>
             </div>
-            <div class="card" id="slide1">
+            <div class="card">
                 <h2>Choubu</h2>
-                <div class="slideshow-container">
+                <div class="slideshow-container" id="slide1">
                     <div class="mySlides fade">
-                        <img id="myImg1" onclick="clickNext('myImg1')" src="../Images/Web//Choubu.png" alt="Choubu"
+                        <img id="myImg3" onclick="clickNext('myImg3')" src="../Images/Web//Choubu.png" alt="Choubu"
                             title="Choubu" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <video id="myVid1" onclick="clickNext('myVid1')" src="../Images/Web/Choubu.mp4" type="video/mp4"
                             controls autoplay muted width="500" alt="Choubu" title="Choubu"
                             style="min-width:100%"></video>
-                    </div>
-                    <a class="prev" onclick="plusSlides('slide1',-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides('slide1',1)">&#10095;</a>
+                    </div>                   
+                    <a class="prev" onclick="plusSlides(slide1,-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(slide1,1)">&#10095;</a>
                     <div class="dots" style="text-align:center">
-                    <span class="dot active" onclick="currentSlide('slide1',0)"></span>
-                    <span class="dot" onclick="currentSlide('slide1',1)"></span>
+                    <span class="dot active" onclick="currentSlide(slide1,0)"></span>
+                    <span class="dot" onclick="currentSlide(slide1,1)"></span>
                 </div>
                 </div>                
                 <p>E-boutique réalisée en local sous Wordpress</p>
-            </div>
+            </div>            
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
-                <img class="modal-content" id="img">
-                <video controls autoplay class="modal-content" id="video"></video>
+                <img class="modal-content zoom" id="img">
+                <video controls autoplay class="modal-content zoom" id="video"></video>
                 <div id="caption"></div>
             </div>
         </div>
